java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateLocalVariable5-hints.pass
Create Field foo in org.netbeans.test.java.hints.CreateLocalVariable5
Create Parameter foo
Create Local Variable foo
